# extract_cdi

./: README.md  _main_.py  complete.py  setup.cfg  taxa-cdi.csv
src/extract_cdi/: __init__.py  complete.py
src/extract_cdi_igorgbr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
