[metadata]
name = extract-cdi-igorgbr
version = 0.0.1
author = Igor Giamoniano
author_email = igorgphotoarte@gmail.com
description = Aplicação que raspa os dados da bolsa de valores, guarda em um arquivo CSV e gera um grafico de linhas.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/igorgbr/extract_cdi
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src